<resources>
    <string name="app_name">Biblioteca</string>
    <string name="codigo">Codigo</string>
    <string name="nome">Nome</string>
    <string name="Paginas">Quant. Paginas</string>
    <string name="Barras">ISSN/ISBN</string>
    <string name="edicao">Edicao</string>
    <string name="dataRetirada">Data de Retirada</string>
    <string name="dataDevolucao">Data de Devolucao</string>
    <string name="RA">RA</string>
    <string name="email">E-Mail</string>
    <string name="inicio">Biblioteca</string>
    <string name="aluguel">Aluguel</string>
    <string name="exemplar">Exemplar</string>
    <string name="aluno">Aluno</string>
    <string name="buscar">Buscar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="atualizar">Atualizar</string>
    <string name="deletar">Deletar</string>
    <string name="listar">Listar</string>
    <string name="livro">Livro</string>
    <string name="revista">Revista</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
